// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast styled components IconWrapper should render properly 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "styled__IconWrapper-sc-1gkwmc0-2",
        "isStatic": false,
        "rules": Array [
          "
  min-width: 48px;
  min-height: 48px;
",
          ";display:flex;align-items:center;margin-left:auto;",
        ],
      },
      "displayName": "styled__IconWrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "styled__IconWrapper-sc-1gkwmc0-2",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`Toast styled components Text should render properly 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "styled__Text-sc-1gkwmc0-1",
        "isStatic": false,
        "rules": Array [
          "margin-left:",
          "8px",
          ";",
        ],
      },
      "displayName": "styled__Text",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "styled__Text-sc-1gkwmc0-1",
      "target": "span",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`Toast styled components TextWrapper should render properly 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "styled__TextWrapper-sc-1gkwmc0-0",
        "isStatic": false,
        "rules": Array [
          "width:100%;box-shadow:0 2px 12px 4px rgba(0,0,0,0.19);border-radius:6px;background-color:",
          "#07752a",
          ";color:",
          "#ffffff",
          ";justify-content:flex-start;flex-direction:row;padding:",
          "16px",
          ";display:flex;align-items:center;",
        ],
      },
      "displayName": "styled__TextWrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "styled__TextWrapper-sc-1gkwmc0-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;
